# ROS2_Fundamentals_Examples

./: CMakeLists.txt  README.md  notes.txt  package.xml
ros2_fundamentals_examples/: notes.txt  py_minimal_publisher.py  py_minimal_subscriber.py
scripts/: minimal_pub_sub_launch.sh
src/: cpp_minimal_publisher.cpp  cpp_minimal_subscriber.cpp
test/gtest/: test_publisher.cpp
test/pytest/: test_publisher.py
